--- a/src/components/layouts/Listing.astro
+++ b/src/components/layouts/Listing.astro
@@ -10,7 +10,16 @@ const { title, area } = Astro.props;
 ---
 
 <Base title={title} area={area}>
-  <div class="container mx-auto max-w-3xl my-10">
+  <div class="container mx-auto max-w-5xl my-10 px-5 sm:px-0">
     <slot />
+
+    <div class="grid sm:grid-cols-11 gap-12">
+      <div class="col-span-8">
+        <slot name="main-column" />
+      </div>
+      <div class="col-span-3">
+        <slot name="sidebar" />
+      </div>
+    </div>
   </div>
 </Base>
