--- a/src/pages/[area]/index.astro
+++ b/src/pages/[area]/index.astro
@@ -7,6 +7,7 @@ import {
 } from "../../utils/postsUtils";
 import Settings from "../../settings.json";
 import List from "../../components/List.astro";
+import CategoriesOverview from "../../components/CategoriesOverview.astro";
 
 export async function getStaticPaths() {
   const posts: Record<string, any>[] = await Astro.glob(
@@ -14,6 +15,7 @@ export async function getStaticPaths() {
   );
 
   let postsPerArea: Record<string, any[]> = {};
+  let categoriesPerArea: Record<string, string[]> = {};
 
   filterAndSortPosts(posts).forEach((post) => {
     const area: string = getArea(post.file);
@@ -25,6 +27,16 @@ export async function getStaticPaths() {
     }
 
     postsPerArea[area].push(post);
+
+    if (categoriesPerArea[area] == undefined) {
+      categoriesPerArea[area] = [];
+    }
+
+    post.frontmatter.categories?.forEach((category: string) => {
+      if (!categoriesPerArea[area].includes(category)) {
+        categoriesPerArea[area].push(category);
+      }
+    });
   });
 
   return Object.keys(postsPerArea).map((area) => {
@@ -32,22 +44,24 @@ export async function getStaticPaths() {
       params: {
         area: area,
       },
-      props: { posts: postsPerArea[area] },
+      props: { posts: postsPerArea[area], categories: categoriesPerArea[area] },
     };
   });
 }
 
 interface Props {
   posts: Record<string, any>[];
+  categories: string[];
 }
 
 const { area } = Astro.params;
-const { posts } = Astro.props;
+const { posts, categories } = Astro.props;
 ---
 
 <Listing
   area={area}
   title={Settings.titles[`posts-${area}` as keyof typeof Settings.titles]}
 >
-  <List posts={posts} />
+  <List posts={posts} slot="main-column" />
+  <CategoriesOverview slot="sidebar" categories={categories} area={area} />
 </Listing>
