--- a/src/components/layouts/Listing.astro
+++ b/src/components/layouts/Listing.astro
@@ -10,7 +10,7 @@ const { title, area } = Astro.props;
 ---
 
 <Base title={title} area={area}>
-  <div class="container mx-auto max-w-5xl my-10 px-5 sm:px-0">
+  <div class="container mx-auto max-w-6xl my-10 px-5">
     <slot />
 
     <div class="grid sm:grid-cols-11 gap-12">
