--- a/src/components/page/Footer.astro
+++ b/src/components/page/Footer.astro
@@ -1,2 +1,13 @@
 ---
 ---
+
+<footer class="bg-black py-10 text-gray-500 text-center mt-20">
+  <div>Copyright &copy; Leonid Lezner</div>
+
+  <ul class="flex justify-center space-x-2 mt-2">
+    <li><a href="/imprint" class="underline hover:text-white">Impressum</a></li>
+    <li>
+      <a href="/privacy" class="underline hover:text-white">Datenschutz</a>
+    </li>
+  </ul>
+</footer>
