--- a/src/components/Meta.astro
+++ b/src/components/Meta.astro
@@ -13,7 +13,9 @@ interface Props {
 const { categories, pubDate, readingTime, area } = Astro.props;
 ---
 
-<div class="mb-7 text-gray-600 flex items-center justify-between">
+<div
+  class="mb-7 text-gray-600 flex items-center justify-between text-sm sm:text-base"
+>
   <div class="flex-1 flex flex-wrap items-center">
     <Newspaper class="w-5 h-5 mr-1" />
     <div class="mr-1">Gepostet</div>
