--- a/src/components/layouts/Single.astro
+++ b/src/components/layouts/Single.astro
@@ -10,7 +10,7 @@ const { title, area } = Astro.props;
 ---
 
 <Base title={title} area={area}>
-  <div class="container mx-auto max-w-3xl my-10">
+  <div class="container mx-auto max-w-4xl my-10 px-5">
     <slot />
   </div>
 </Base>
