--- a/src/components/ContentContainer.astro
+++ b/src/components/ContentContainer.astro
@@ -1,5 +1,5 @@
 <div
-  class="prose prose-xl max-w-none font-serif prose-a:no-underline prose-a:border-b-2 prose-a:border-prime prose-a:-mb-[2px] hover:prose-a:bg-prime"
+  class="prose prose-xl max-w-none font-serif prose-a:no-underline prose-a:border-b-2 prose-a:border-prime prose-a:-mb-[2px] hover:prose-a:bg-prime work:prose-a:border-second hover:work:prose-a:bg-second hover:work:prose-a:text-gray-800 work:prose-invert"
 >
   <slot />
 </div>
