--- a/src/components/Meta.astro
+++ b/src/components/Meta.astro
@@ -14,7 +14,7 @@ const { categories, pubDate, readingTime, area } = Astro.props;
 ---
 
 <div
-  class="mb-7 text-gray-600 flex items-center justify-between text-sm sm:text-base"
+  class="mb-7 text-gray-600 work:text-gray-400 flex items-center justify-between text-sm sm:text-base"
 >
   <div class="flex-1 flex flex-wrap items-center">
     <Newspaper class="w-5 h-5 mr-1" />
