--- a/src/components/page/Headline1.astro
+++ b/src/components/page/Headline1.astro
@@ -1,3 +1,5 @@
-<h1 class="text-4xl sm:text-5xl font-bold mb-10 sm:leading-tight">
+<h1
+  class="text-4xl sm:text-5xl font-bold mb-10 sm:leading-tight work:text-gray-300"
+>
   <slot />
 </h1>
