--- a/src/components/ContinueReading.astro
+++ b/src/components/ContinueReading.astro
@@ -9,11 +9,11 @@ const { url } = Astro.props;
 ---
 
 <div
-  class="absolute bottom-1 pt-16 w-full text-center bg-gradient-to-b from-transparent to-white z-10"
+  class="absolute bottom-1 pt-16 w-full text-center bg-gradient-to-b from-transparent to-white work:to-gray-800 z-10"
 >
   <a
     href={url}
-    class="px-16 py-2 bg-white border border-prime hover:bg-prime rounded-full shadow-md inline-flex space-x-3"
+    class="px-16 py-2 bg-white work:bg-gray-800 work:text-gray-300 border border-prime work:border-second hover:bg-prime rounded-full shadow-md inline-flex space-x-3 hover:work:bg-second hover:work:text-gray-800"
   >
     <>
       <div>Weiterlesen</div>
