--- a/src/components/List.astro
+++ b/src/components/List.astro
@@ -14,7 +14,7 @@ const { posts } = Astro.props;
   {
     posts.map((post) => (
       <article class="relative">
-        <h2 class="text-4xl font-bold mb-7">
+        <h2 class="text-4xl font-bold mb-7 work:text-gray-300">
           <a href={post.frontmatter.url}>{post.frontmatter.title}</a>
         </h2>
 
