Finishing first design draft before going live

--- a/src/components/layouts/Base.astro
+++ b/src/components/layouts/Base.astro
@@ -4,6 +4,7 @@ import Header from "../page/Header.astro";
 import Settings from "../../settings.json";
 
 import "../../styles/index.css";
+import Page from "./Page.astro";
 
 interface Props {
   title: string;
@@ -13,48 +14,14 @@ interface Props {
 const { title, area } = Astro.props;
 ---
 
-<html lang={Settings.language} class={area}>
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" type="image/svg+xml" href="images/favicon.svg" />
-    <link rel="apple-touch-icon" href="images/apple-touch-icon.png" />
-
-    <meta name="viewport" content="width=device-width" />
-    <meta name="generator" content={Astro.generator} />
-
-    <style>
-      @font-face {
-        font-family: "NotoSerif";
-        src: url("/fonts/Noto_Serif/NotoSerif-Regular.ttf") format("truetype");
-        font-weight: normal;
-      }
-
-      @font-face {
-        font-family: "NotoSerif";
-        src: url("/fonts/Noto_Serif/NotoSerif-Bold.ttf") format("truetype");
-        font-weight: 700;
-      }
-
-      @font-face {
-        font-family: "NotoSans";
-        src: url("/fonts/Noto_Sans/NotoSans-Regular.ttf") format("truetype");
-        font-weight: normal;
-      }
-
-      @font-face {
-        font-family: "NotoSans";
-        src: url("/fonts/Noto_Sans/NotoSans-Bold.ttf") format("truetype");
-        font-weight: bold;
-      }
-    </style>
-
-    <title>{title} | {Settings.name}</title>
-  </head>
-  <body class="work:bg-gray-800">
-    <Header area={area} />
-    <div class="min-h-screen">
-      <slot />
-    </div>
-    <Footer />
-  </body>
-</html>
+<Page
+  title={title + " | " + Settings.name}
+  area={area}
+  className="work:bg-gray-800"
+>
+  <Header area={area} />
+  <div class="min-h-screen">
+    <slot />
+  </div>
+  <Footer />
+</Page>
