Changing the homepage

--- a/src/components/page/Footer.astro
+++ b/src/components/page/Footer.astro
@@ -3,9 +3,7 @@ import ArrowTopRightOnSquare from "astro-heroicons/solid/ArrowTopRightOnSquare.a
 import FooterButton from "./FooterButton.astro";
 ---
 
-<footer
-  class="bg-gray-200 work:bg-gray-900 py-10 text-gray-500 text-center mt-20"
->
+<footer class="bg-gray-200 work:bg-gray-900 py-10 text-gray-500 text-center">
   <div
     class="max-w-6xl px-5 sm:flex items-center mx-auto justify-between space-y-4 sm:space-y-0"
   >
