--- a/src/components/page/Header.astro
+++ b/src/components/page/Header.astro
@@ -4,32 +4,48 @@ import ArrowRightCircle from "astro-heroicons/solid/ArrowRightCircle.astro";
 
 interface Props {
   area?: string;
+  showSwitch?: boolean;
+  name?: string;
 }
-const { area = "" } = Astro.props;
+const { area = "", showSwitch = true, name } = Astro.props;
 
 let switchLink: { href: string; text: string };
 
-if (area === "home") {
-  switchLink = {
-    href: "/work",
-    text: "Work",
-  };
+if (showSwitch) {
+  if (area === "home") {
+    switchLink = {
+      href: "/work",
+      text: "Zu Work wechseln",
+    };
+  } else {
+    switchLink = {
+      href: "/home",
+      text: "Zu Home wechseln",
+    };
+  }
 } else {
-  switchLink = {
-    href: "/home",
-    text: "Home",
-  };
+  if (area === "home") {
+    switchLink = {
+      href: "/home",
+      text: "Öffnen",
+    };
+  } else {
+    switchLink = {
+      href: "/work",
+      text: "Öffnen",
+    };
+  }
 }
 ---
 
-<header class="work:bg-second bg-prime sm:mb-20">
+<header class="work:bg-second bg-prime">
   <div class="max-w-6xl flex items-center mx-auto px-5 justify-between">
     <div class="font-serif my-4 flex justify-center">
       <a href={"/" + area}>
         <div class="flex items-center space-x-3 work:text-gray-800">
           <img src="/images/logo-simple.svg" class="w-10 h-10" />
           <div class="text-sm">
-            <div class="font-bold">{Settings.name}</div>
+            <div class="font-bold">{name ?? Settings.name}</div>
             {area === "home" && <div>{Settings.titles["posts-home"]}</div>}
             {area === "work" && <div>{Settings.titles["posts-work"]}</div>}
           </div>
@@ -38,11 +54,13 @@ if (area === "home") {
     </div>
     <div>
       <a
-        class="inline-flex rounded-full bg-white hover:bg-gray-50 work:bg-gray-800 hover:work:bg-gray-700 px-10 py-2 space-x-2 items-center work:text-gray-200"
+        class="inline-flex rounded-full bg-white hover:bg-gray-50 work:bg-gray-800 hover:work:bg-gray-700 px-7 py-2 space-x-2 items-center work:text-gray-200"
         href={switchLink.href}
-        ><span>{switchLink.text}</span><ArrowRightCircle
-          class="w-5 h-5 text-prime work:text-second"
-        />
+      >
+        <>
+          <span>{switchLink.text}</span>
+          <ArrowRightCircle class="w-5 h-5 text-prime work:text-second" />
+        </>
       </a>
     </div>
   </div>
