Fixing the favicon

--- a/src/components/layouts/Page.astro
+++ b/src/components/layouts/Page.astro
@@ -15,8 +15,9 @@ const { title, area, className } = Astro.props;
 <html lang={Settings.language} class={area}>
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" type="image/svg+xml" href="images/favicon.svg" />
-    <link rel="apple-touch-icon" href="images/apple-touch-icon.png" />
+    <link rel="icon" type="image/x-icon" href="/images/favicon.ico" />
+    <link rel="icon" type="image/svg+xml" href="/images/favicon.svg" />
+    <link rel="apple-touch-icon" href="/images/apple-touch-icon.png" />
 
     <meta name="viewport" content="width=device-width" />
     <meta name="generator" content={Astro.generator} />
