--- a/src/components/page/Footer.astro
+++ b/src/components/page/Footer.astro
@@ -7,7 +7,7 @@ import FooterButton from "./FooterButton.astro";
   <div
     class="max-w-6xl px-5 sm:flex items-center mx-auto justify-between space-y-4 sm:space-y-0"
   >
-    <div>&copy; 2022 Leonid Lezner</div>
+    <div>&copy; 2022-2023 Leonid Lezner</div>
 
     <ul class="flex justify-center space-x-2">
       <li>
@@ -22,6 +22,13 @@ import FooterButton from "./FooterButton.astro";
           href="/privacy"
           class="underline hover:work:text-white hover:text-gray-800"
           >Datenschutz</a
+        >
+      </li>
+      <li>
+        <a
+          href="/rss.xml"
+          class="underline hover:work:text-white hover:text-gray-800"
+          >RSS Feed</a
         >
       </li>
     </ul>
