--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -27,8 +27,8 @@ filterAndSortPosts(posts).forEach((post) => {
 ---
 
 <Page title={Settings.name}>
-  <div class="sm:flex sm:min-h-screen overflow-hidden">
-    <div class="work bg-gray-800 sm:w-1/2 flex">
+  <div class="md:flex sm:min-h-screen overflow-hidden">
+    <div class="work bg-gray-800 md:w-1/2 flex">
       <div class="flex-1">
         <Header area="work" showSwitch={false} name="Leonid.at/Work" />
         <div class="p-5 sm:p-10">
@@ -36,7 +36,7 @@ filterAndSortPosts(posts).forEach((post) => {
         </div>
       </div>
     </div>
-    <div class="sm:w-1/2 flex">
+    <div class="md:w-1/2 flex">
       <div class="flex-1">
         <Header area="home" showSwitch={false} name="Leonid.at/Home" />
         <div class="p-5 sm:p-10">
