--- a/src/components/page/Headline1.astro
+++ b/src/components/page/Headline1.astro
@@ -1,5 +1,5 @@
 <h1
-  class="text-4xl sm:text-5xl font-bold mb-10 sm:leading-tight work:text-gray-300"
+  class="text-2xl sm:text-4xl md:text-5xl font-bold mb-5 sm:mb-10 sm:leading-tight work:text-gray-300"
 >
   <slot />
 </h1>
