--- a/src/components/page/Footer.astro
+++ b/src/components/page/Footer.astro
@@ -49,3 +49,7 @@ import FooterButton from "./FooterButton.astro";
     </ul>
   </div>
 </footer>
+
+<a style="display:none;" rel="me" href="https://norden.social/@leonid"
+  >Mastodon</a
+>
