--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -26,7 +26,7 @@ filterAndSortPosts(posts).forEach((post) => {
 });
 ---
 
-<Page title={Settings.name}>
+<Page title={Settings.name} metaTitle={Settings.name}>
   <div class="md:flex sm:min-h-screen overflow-hidden">
     <div class="work bg-gray-800 md:w-1/2 flex">
       <div class="flex-1">
@@ -45,4 +45,8 @@ filterAndSortPosts(posts).forEach((post) => {
       </div>
     </div>
   </div>
+
+  <a style="display:none;" rel="me" href="https://norden.social/@leonid"
+    >Mastodon</a
+  >
 </Page>
